# digital-twin-supply-chain

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  base.py  canonical_models.py
backend/app/adapters/erp/: csv_erp.py  sap_erp.py
backend/app/adapters/tms/: csv_tms.py
backend/app/db/: seed.py  session.py
backend/app/ingest/: consumer.py  producer.py  topics.py
backend/app/ingest/processors/: inventory_processor.py  order_processor.py  shipment_processor.py
backend/app/models/: __init__.py  base.py  facility.py  inventory.py  order.py  shipment.py  supplier.py
backend/app/twin/: __init__.py  engine.py  graph.py  state.py
backend/app/twin/simulation/: __init__.py  monte_carlo.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py
backend/tests/unit/: test_config.py  test_csv_erp_adapter.py  test_health.py  test_ingest_processors.py  test_monte_carlo.py  test_twin_engine.py  test_twin_graph.py  test_twin_state.py
docs/: adapter-interface.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
infra/: docker-compose.yml
infra/kafka/: topics.sh
scripts/: simulate_kafka_feed.py
